Move enable-native-access jvmArgs into examples-java/build.gradle
This simplifies the build and will also simplify a rebased PR #42