@@ -31,4 +31,5 @@ application {
 run {
     def userHome = System.getProperty("user.home")
     systemProperty "java.library.path", findProperty("javaPath") ?: "${userHome}/.nix-profile/lib"
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
 }
